apply plugin: 'java'
apply plugin: 'idea'
apply plugin: 'groovy'
apply plugin: 'war'

webAppDirName = 'web'

//export PATH=$PATH:/opt/gradle/gradle-4.9/bin

targetCompatibility = '1.11'
sourceCompatibility = '1.11'

repositories {
    mavenCentral()
    maven { url 'https://jitpack.io' }
}

dependencies {

    compile group: 'javax.annotation', name: 'javax.annotation-api', version: '1.2-b04'

    implementation 'com.discord4j:discord4j-core:3.1.3'
    implementation 'com.github.pircbotx:pircbotx:2.2'


    runtime group: 'ch.qos.logback', name: 'logback-core', version: '1.2.3'
    compile group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3'

    compile 'org.slf4j:slf4j-api:2.0.0-alpha0'
    runtime 'org.slf4j:slf4j-jdk14:2.0.0-alpha0'

    compile group: 'com.asual.lesscss', name: 'lesscss-engine', version: '1.3.0'
    compile group: 'com.asual.lesscss', name: 'lesscss-servlet', version: '1.3.0'

    compile group: 'org.jsoup', name: 'jsoup', version: '1.12.1'


    implementation 'org.hibernate:hibernate-agroal:5.4.28.Final'
    compile 'com.zaxxer:HikariCP:4.0.1'

    runtime group: 'mysql', name: 'mysql-connector-java', version: '5.1.13'


    ext.tapestryVersion = '5.6.2'
    compile group: 'org.apache.tapestry', name: 'tapestry5-annotations', version: tapestryVersion
    compile group: 'org.apache.tapestry', name: 'tapestry-core', version: tapestryVersion
    compile group: 'org.apache.tapestry', name: 'tapestry-func', version: tapestryVersion
    compile group: 'org.apache.tapestry', name: 'tapestry-hibernate', version: tapestryVersion
    compile group: 'org.apache.tapestry', name: 'tapestry-hibernate-core', version: tapestryVersion
    compile group: 'org.apache.tapestry', name: 'tapestry-ioc', version: tapestryVersion
    compile group: 'org.apache.tapestry', name: 'tapestry-json', version: tapestryVersion
    compile group: 'org.apache.tapestry', name: 'tapestry-upload', version: tapestryVersion
    compile group: 'org.apache.tapestry', name: 'tapestry-test', version: tapestryVersion, transitive: false

    ext.jettyVersion = '10.0.0'
    compile group: 'org.eclipse.jetty', name: 'jetty-webapp', version: jettyVersion
    compile group: 'org.eclipse.jetty', name: 'jetty-server', version: jettyVersion
    compile group: 'org.eclipse.jetty', name: 'jetty-servlet', version: jettyVersion

    testImplementation('org.junit.jupiter:junit-jupiter-api:5.4.2')
    testRuntime('org.junit.jupiter:junit-jupiter-engine:5.4.2')
}

tasks.idea {
    dependsOn = [ cleanIdeaModule, ideaModule ]
}

test {
    useJUnitPlatform()
}

sourceSets {
    main {
        java.srcDirs = files('src')
        resources.srcDirs = files('src')
    }
    test {
        java.srcDirs = files('test')
    }
}

clean {
    delete files('out')
    delete files('build')
}